2009-10-26  Benjamin Otte  <otte@gnome.org>

Reviewed by Gustavo Noronha.

        Don't store properties in the MediaPlayerPrivate class

        Access them via the MediaPlayer class instead.
        https://bugs.webkit.org/show_bug.cgi?id=30462

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::MediaPlayerPrivate):
        (WebCore::MediaPlayerPrivate::seek):
        (WebCore::MediaPlayerPrivate::setVolume):
        (WebCore::MediaPlayerPrivate::setRate):
        (WebCore::MediaPlayerPrivate::setVisible):
        (WebCore::MediaPlayerPrivate::paint):
        (WebCore::MediaPlayerPrivate::createGSTPlayBin):
        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/41568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50122 268f45cc-cd09-0410-ab3c-d52691b4dbfc